2003-12-31 Guilhem Lavaux <guilhem@kaffe.org>
	* java/net/URL.java
	(URL): Change context path to "/" if it is empty.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75264 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-31 Guilhem Lavaux <guilhem@kaffe.org>
+
+	* java/net/URL.java
+	(URL): Change context path to "/" if it is empty.
+
 2003-12-31  Michael Koch  <konqueror@gmx.de>
 
 	* testsuite/libjava.mauve/xfails: Removed tests that pass now:
