2003-12-31  Michael Koch  <konqueror@gmx.de>
	* gnu/java/net/protocol/http/Connection.java
	(sendRequest): Dont encode output in default character encoding,
	add correct version number to HTTP user agent string.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75266 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-31  Michael Koch  <konqueror@gmx.de>
+
+	* gnu/java/net/protocol/http/Connection.java
+	(sendRequest): Dont encode output in default character encoding,
+	add correct version number to HTTP user agent string.
+
 2003-12-31  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* java/io/ObjectOutputStream.java
