--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -1777,9 +1777,8 @@
   [(set (zero_extract:SI (match_operand 0 "ext_register_operand" "+Q")
 			 (const_int 8)
 			 (const_int 8))
-	(and:SI (lshiftrt:SI (match_operand:SI 1 "register_operand" "Q")
-			     (const_int 8))
-		(const_int 255)))]
+	(lshiftrt:SI (match_operand:SI 1 "register_operand" "Q")
+		     (const_int 8)))]
   ""
   "mov{b}\t{%h1, %h0|%h0, %h1}"
   [(set_attr "type" "imov")
