--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-31  Roger Sayle  <roger@eyesopen.com>
+
+	* configure.in (ia64*-*-hpux*): Disable building java libraries.
+	* configure: Regenerated.
+
 2003-12-23  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* MAINTAINERS: Remove the mn10200 maintainer.
