2003-12-20  Andrew Pinski  <pinskia@physics.uc.edu>
	Backport from mainline:
	2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>

		PR c++/13507
		* decl.c (duplicate_decls): Use build_type_attribute_variant to
		merge attributes.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75293 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-20  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	Backport from mainline:
+	2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+		PR c++/13507
+		* decl.c (duplicate_decls): Use build_type_attribute_variant to
+		merge attributes.
+
 2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/13445
