PR fortran/12632 	* tree.c (integer_nonzerop): New predicate for nonzero integers. 	* tree.h (integer_nonzerop): Add function prototype. 	* fold-const.c (fold) <COND_EXPR>: Don't fold a constant condition, 	if we'd replace a COND_EXPR of non-void type by one of its operands 	of void type.
	* com.c (ffecom_subscript_check_): Take as an extra argument the
	(possibly NULL) decl of the array.  Don't create unnecessary tree
	nodes if the array index is known to be safe at compile-time.
	If the array index is unsafe, force the array decl into memory to
	avoid RTL expansion problems.
	(ffecom_array_ref_): Update calls to ffecom_subscript_check_.
	(ffecom_char_args_x_): Likewise.

	* g77.dg/12632.f: New test case.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75295 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-31  Roger Sayle  <roger@eyesopen.com>
+
+	PR fortran/12632
+	* tree.c (integer_nonzerop): New predicate for nonzero integers.
+	* tree.h (integer_nonzerop): Add function prototype.
+	* fold-const.c (fold) <COND_EXPR>: Don't fold a constant condition,
+	if we'd replace a COND_EXPR of non-void type by one of its operands
+	of void type.
+
 2003-12-31  Kazu Hirata  <kazu@cs.umass.edu>
 
 	Backport from mainline:
