--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,32 @@
+2003-12-26  Feng Wang  <fengwang@nudt.edu.cn>
+
+	* dump-parse-tree.c (gfc_show_code_node): Add ASSIGN and ASSIGNED GOTO
+	dumping.
+	* gfortran.h (gfc_statement): New ST_LABEL_ASSIGNMENT.
+	(gfc_exec_op): New EXEC_LABEL_ASSIGN.
+	(symbol_attribute):New variable attribute: assign.
+	* io.c (resolve_tag):Integer variable is allowed.
+	(match_dt_format): Add ASSIGN statement. Set assign flag.
+	* match.c (gfc_match_if): Change ST_NONE to ST_LABEL_ASSIGNMENT.
+	(gfc_match_assign): Add ASSIGN statement. Set assign flag.
+	(gfc_match_goto): Add ASSIGNED GOTO statement. Set assign flag.
+	* parse.c (decode_statement): Add ST_LABEL_ASSIGNMENT.
+	(next_statement): Add ST_LABEL_ASSIGNMENT.
+	(gfc_ascii_statement): Add ST_LABEL_ASSIGNMENT.
+	* resolve.c (resolve_code): Resolve ASSIGN and ASSIGNED GOTO statement.
+	(resolve_blocks): Resolve ASSIGNED GOTO statement label list.
+	* st.c (gfc_free_statement): Add EXEC_LABEL_ASSIGN.
+	* trans-decl.c (gfc_get_symbol_decl): Create the shadow variable for
+	assign.  Put them into the stuct lang_decl.
+	* trans-io.c (set_string): Add the assign statement.
+	* trans-stmt.c (gfc_trans_label_assign): New function.
+	(gfc_trans_goto): Translate ASSIGNED GOTO statement.
+	* trans-stmt.h (gfc_trans_label_assign): Added function prototype.
+	* trans.c (gfc_trans_code): Add EXEC_LABEL_ASSIGN.
+	* trans.h (lang_decl):Add shadow variable decl tree needed by assign.
+	(GFC_DECL_ASSIGN_ADDR(node)): New macro to access this.
+	(GFC_DECL_ASSIGN(node)): New macro to access flag.
+
 2003-12-31  Huang Chun <chunhuang73@hotmail.com>
 
 	PR fortran/13434
