* match.c (gfc_match_pause): Fix spelling.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75299 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-01  Steve Kargl  <sgk@troutmask.apl.washington.edu>
+
+	* match.c (gfc_match_pause): Fix spelling.
+
 2004-01-01  Steven Bosscher  <stevenb@suse.de>
 
 	PR fortran/13251
