--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR optimization/13521
+	* gcc.c-torture/compile/20031231-1.c: New test.
+
 2003-12-30  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* gcc.dg/sibcall-4.c: Replace mn10?00 with mn10300.
