--- a/tree-ssa-20020619-branch/libgfortran/ChangeLog
+++ b/tree-ssa-20020619-branch/libgfortran/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-01  Paul Brook  <paul@codesourcery.com>
+
+	* io/list_read.c (find_nml_node): Make static.
+	(match_namelist_name): Ditto.
+	* io/read.c (convert_precision_real): Make static, fix spelling.
+	* io/transfer.c (extract_real): Remove unused prototype.
+	(st_set_nml_var): Make static.
+	* io/write.c (extract_real): Make static.
+
 2003-12-12  Huang Chun <chunhuang73@hotmal.com>
 
 	* intrinsics/string_intrinsics.c (string_index): Fix logics thinko.
