--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -4728,6 +4728,171 @@
   "TARGET_SSE2 && TARGET_SSE_MATH && TARGET_64BIT"
   "x86_emit_floatuns (operands); DONE;")
 
+;; SSE extract/set expanders
+
+(define_expand "vec_setv2df"
+  [(match_operand:V2DF 0 "register_operand" "")
+   (match_operand:DF 1 "register_operand" "")
+   (match_operand 2 "const_int_operand" "")]
+  "TARGET_SSE2"
+{
+  switch (INTVAL (operands[2]))
+    {
+    case 0:
+      emit_insn (gen_sse2_movsd (operands[0], operands[0],
+				 simplify_gen_subreg (V2DFmode, operands[1],
+						      DFmode, 0)));
+      break;
+    case 1:
+      {
+	rtx op1 = simplify_gen_subreg (V2DFmode, operands[1], DFmode, 0);
+
+	emit_insn (gen_sse2_unpcklpd (operands[0], operands[0], op1));
+      }
+      break;
+    default:
+      abort ();
+    }
+  DONE;
+})
+
+(define_expand "vec_extractv2df"
+  [(match_operand:DF 0 "register_operand" "")
+   (match_operand:V2DF 1 "register_operand" "")
+   (match_operand 2 "const_int_operand" "")]
+  "TARGET_SSE2"
+{
+  switch (INTVAL (operands[2]))
+    {
+    case 0:
+      emit_move_insn (operands[0], gen_lowpart (DFmode, operands[1]));
+      break;
+    case 1:
+      {
+	rtx dest = simplify_gen_subreg (V2DFmode, operands[0], DFmode, 0);
+
+	emit_insn (gen_sse2_unpckhpd (dest, operands[1], operands[1]));
+      }
+      break;
+    default:
+      abort ();
+    }
+  DONE;
+})
+
+(define_expand "vec_initv2df"
+  [(match_operand:V2DF 0 "register_operand" "")
+   (match_operand 1 "" "")]
+  "TARGET_SSE2"
+{
+  ix86_expand_vector_init (operands[0], operands[1]);
+  DONE;
+})
+
+(define_expand "vec_setv4sf"
+  [(match_operand:V4SF 0 "register_operand" "")
+   (match_operand:SF 1 "register_operand" "")
+   (match_operand 2 "const_int_operand" "")]
+  "TARGET_SSE"
+{
+  switch (INTVAL (operands[2]))
+    {
+    case 0:
+      emit_insn (gen_sse_movss (operands[0], operands[0],
+				simplify_gen_subreg (V4SFmode, operands[1],
+						     SFmode, 0)));
+      break;
+    case 1:
+      {
+	rtx op1 = simplify_gen_subreg (V4SFmode, operands[1], SFmode, 0);
+	rtx tmp = gen_reg_rtx (V4SFmode);
+ 
+        emit_move_insn (tmp, operands[0]);
+	emit_insn (gen_sse_unpcklps (operands[0], operands[0], operands[0]));
+	emit_insn (gen_sse_movss (operands[0], operands[0], op1));
+        emit_insn (gen_sse_shufps (operands[0], operands[0], tmp,
+                                   GEN_INT (1 + (0<<2) + (2<<4) + (3<<6))));
+      }
+    case 2:
+      {
+        rtx op1 = simplify_gen_subreg (V4SFmode, operands[1], SFmode, 0);
+        rtx tmp = gen_reg_rtx (V4SFmode);
+
+        emit_move_insn (tmp, operands[0]);
+        emit_insn (gen_sse_movss (tmp, tmp, op1));
+        emit_insn (gen_sse_shufps (operands[0], operands[0], tmp,
+                                   GEN_INT (0 + (1<<2) + (0<<4) + (3<<6))));
+      }
+      break;
+    case 3:
+      {
+        rtx op1 = simplify_gen_subreg (V4SFmode, operands[1], SFmode, 0);
+        rtx tmp = gen_reg_rtx (V4SFmode);
+
+        emit_move_insn (tmp, operands[0]);
+        emit_insn (gen_sse_movss (tmp, tmp, op1));
+        emit_insn (gen_sse_shufps (operands[0], operands[0], tmp,
+                                   GEN_INT (0 + (1<<2) + (2<<4) + (0<<6))));
+      }
+      break;
+    default:
+      abort ();
+    }
+  DONE;
+})
+
+(define_expand "vec_extractv4sf"
+  [(match_operand:SF 0 "register_operand" "")
+   (match_operand:V4SF 1 "register_operand" "")
+   (match_operand 2 "const_int_operand" "")]
+  "TARGET_SSE"
+{
+  switch (INTVAL (operands[2]))
+    {
+    case 0:
+      emit_move_insn (operands[0], gen_lowpart (SFmode, operands[1]));
+      break;
+    case 1:
+      {
+	rtx op0 = simplify_gen_subreg (V4SFmode, operands[1], SFmode, 0);
+	rtx tmp = gen_reg_rtx (V4SFmode);
+ 
+        emit_move_insn (tmp, operands[1]);
+        emit_insn (gen_sse_shufps (op0, tmp, tmp,
+                                   GEN_INT (1)));
+      }
+    case 2:
+      {
+	rtx op0 = simplify_gen_subreg (V4SFmode, operands[1], SFmode, 0);
+	rtx tmp = gen_reg_rtx (V4SFmode);
+ 
+        emit_move_insn (tmp, operands[1]);
+        emit_insn (gen_sse_unpckhps (op0, tmp, tmp));
+      }
+    case 3:
+      {
+	rtx op0 = simplify_gen_subreg (V4SFmode, operands[1], SFmode, 0);
+	rtx tmp = gen_reg_rtx (V4SFmode);
+ 
+        emit_move_insn (tmp, operands[1]);
+        emit_insn (gen_sse_shufps (op0, tmp, tmp,
+                                   GEN_INT (3)));
+      }
+    default:
+      abort ();
+    }
+  DONE;
+})
+
+(define_expand "vec_initv4sf"
+  [(match_operand:V4SF 0 "register_operand" "")
+   (match_operand 1 "" "")]
+  "TARGET_SSE"
+{
+  ix86_expand_vector_init (operands[0], operands[1]);
+  DONE;
+})
+
 ;; Add instructions
 
 ;; %%% splits for addsidi3
@@ -22386,11 +22551,11 @@
 	 (vec_select:DF (match_operand:V2DF 1 "register_operand" "0")
 			(parallel [(const_int 1)]))
 	 (vec_select:DF (match_operand:V2DF 2 "register_operand" "x")
-			(parallel [(const_int 0)]))))]
+			(parallel [(const_int 1)]))))]
   "TARGET_SSE2"
   "unpckhpd\t{%2, %0|%0, %2}"
   [(set_attr "type" "ssecvt")
-   (set_attr "mode" "TI")])
+   (set_attr "mode" "V2DF")])
 
 (define_insn "sse2_unpcklpd"
   [(set (match_operand:V2DF 0 "register_operand" "=x")
@@ -22398,11 +22563,11 @@
 	 (vec_select:DF (match_operand:V2DF 1 "register_operand" "0")
 			(parallel [(const_int 0)]))
 	 (vec_select:DF (match_operand:V2DF 2 "register_operand" "x")
-			(parallel [(const_int 1)]))))]
+			(parallel [(const_int 0)]))))]
   "TARGET_SSE2"
   "unpcklpd\t{%2, %0|%0, %2}"
   [(set_attr "type" "ssecvt")
-   (set_attr "mode" "TI")])
+   (set_attr "mode" "V2DF")])
 
 ;; MMX pack/unpack insns.
 
@@ -22718,17 +22883,6 @@
   [(set_attr "type" "ssecvt")
    (set_attr "mode" "V2DF")])
 
-(define_insn "sse2_movlpd"
-  [(set (match_operand:V2DF 0 "nonimmediate_operand" "=x,m")
-	(vec_merge:V2DF
-	 (match_operand:V2DF 1 "nonimmediate_operand" "0,0")
-	 (match_operand:V2DF 2 "nonimmediate_operand" "m,x")
-	 (const_int 1)))]
-  "TARGET_SSE2 && (GET_CODE (operands[1]) == MEM || GET_CODE (operands[2]) == MEM)"
-  "movlpd\t{%2, %0|%0, %2}"
-  [(set_attr "type" "ssecvt")
-   (set_attr "mode" "V2DF")])
-
 (define_expand "sse2_loadsd"
   [(match_operand:V2DF 0 "register_operand" "")
    (match_operand:DF 1 "memory_operand" "")]
@@ -22751,15 +22905,17 @@
    (set_attr "mode" "DF")])
 
 (define_insn "sse2_movsd"
-  [(set (match_operand:V2DF 0 "register_operand" "=x")
+  [(set (match_operand:V2DF 0 "nonimmediate_operand" "=x,x,m")
 	(vec_merge:V2DF
-	 (match_operand:V2DF 1 "register_operand" "0")
-	 (match_operand:V2DF 2 "register_operand" "x")
+	 (match_operand:V2DF 1 "nonimmediate_operand" "0,0,0")
+	 (match_operand:V2DF 2 "nonimmediate_operand" "x,m,x")
 	 (const_int 1)))]
-  "TARGET_SSE2"
-  "movsd\t{%2, %0|%0, %2}"
+  "TARGET_SSE2 && ix86_binary_operator_ok (UNKNOWN, V2DFmode, operands)"
+  "@movsd\t{%2, %0|%0, %2}
+    movlpd\t{%2, %0|%0, %2}
+    movlpd\t{%2, %0|%0, %2}"
   [(set_attr "type" "ssecvt")
-   (set_attr "mode" "DF")])
+   (set_attr "mode" "DF,V2DF,V2DF")])
 
 (define_insn "sse2_storesd"
   [(set (match_operand:DF 0 "memory_operand" "=m")
