PR fortran/13432 	* resolve.c (resolve_symbol): Allow assumed length function results.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75305 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-01  Paul Brook  <paul@codesourcery.com>
+
+	PR fortran/13432
+	* resolve.c (resolve_symbol): Allow assumed length function results.
+
 2004-01-01  Steve Kargl  <sgk@troutmask.apl.washington.edu>
 
 	* match.c (gfc_match_pause): Fix spelling.
