* tree-vectorizer.c: New file. Implements loop vectorization         pass.         * tree-vectorizer.h: New file.         * Makefile.in: (tree-vectorizer.c,tree-vectorizer.h): New files.         * tree-dump.c: (dump_files): New dump file for the new         vectorization pass.         * tree.h: (TDI_vect): New dump index for the new vectorization         pass.         * timevar.def (TV_TREE_VECTORIZATION): Support new         vectorization pass.         * opts.c: (flag_tree_vetorize): New flag to enable/disable the         new vectorization pass.         * flags.h: Same.         * toplev.c: Same.         * common.opt: (ftree-vectorize): Same.         * doc/invoke.texi: Document above new options.         * tree-optimize.c: (optimize_function_tree): Invoke the new         vetorization pass.         * tree-flow.h: (struct stmt_ann_d): New field (aux) to allow         recording information per stmt.         * tree-data-ref.c (vec_analyze_array): New function, exposing         API to the vectorizer.         (vec_array_base_name_differ_p): New function, exposing API to         the vectorizer.         * tree-data-ref.h: Same.         * defaults.h: (UNITS_PER_SIMD_WORD): Define.         * config/rs6000/rs6000.h: (UNITS_PER_SIMD_WORD): Same.         * target-def.h (TARGET_VECTYPE_FOR_SCALAR_TYPE): Declare a new         target hook for vectorization.         * target.h (vectype_for_scalar_type): Same.         * config/rs6000/rs6000.c: (rs6000_vectype_for_scalar_type):         Implement the above new target hook.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75309 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/lno-branch/gcc/doc/invoke.texi
+++ b/lno-branch/gcc/doc/invoke.texi
@@ -258,6 +258,7 @@ in the following sections.
 -fdump-scalar-evolutions@r{[}-@var{n}@r{]} @gol
 -fdump-all-data-deps@r{[}-@var{n}@r{]}@gol
 -fdump-tree-loop@r{[}-@var{n}@r{]} -fdump-tree-sra@r{[}-@var{n}@r{]} @gol
+-fdump-tree-vect@r{[}-@var{n}@r{]}@gol
 -feliminate-dwarf2-dups -feliminate-unused-debug-types @gol
 -feliminate-unused-debug-symbols -fmem-report -fprofile-arcs @gol
 -frandom-seed=@var{string} -fsched-verbose=@var{n} @gol
@@ -309,6 +310,7 @@ in the following sections.
 -fdisable-tree-ssa -ftree-dominator-opts -ftree-must-alias @gol
 -fscalar-evolutions -fall-data-deps @gol
 -ftree-loop-optimize -ftree-sra @gol
+-ftree-vectorize @gol
 --param @var{name}=@var{value}
 -O  -O0  -O1  -O2  -O3  -Os}
 
@@ -3591,6 +3593,11 @@ name is made by appending @file{.dom} to the source file name.
 Dump each function after applying tree-level loop optimizations.  The file
 name is made by appending @file{.loop} to the source file name.
 
+@item vect
+@opindex fdump-tree-vect
+Dump each function after applying tree-level loop vectorization.  The file
+name is made by appending @file{.vect} to the source file name.
+
 @item all
 @opindex fdump-tree-all
 Enable all the available tree dumps with the flags provided in this option.
@@ -4344,6 +4351,10 @@ default at -O and higher.
 @item -ftree-loop-optimize
 Perform loop optimization on trees.  This flag is enabled by
 default at -O and higher.
+
+@item -ftree-vectorize
+Perform loop vectorization on trees.  This flag is disabled by
+default.
 
 @item -ftree-must-alias
 Perform must-alias analysis on trees.  This analysis will attempt to
