* update_version: Add some documentation.
	* update_version (ADD_BRANCHES): Add lno-branch.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75316 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-02  Gerald Pfeifer  <gp@suse.de>
+
+	* update_version: Add some documentation.
+	
+2004-01-02  Pop Sébastian  <pop@gauvain.u-strasbg.fr>
+
+	* update_version (ADD_BRANCHES): Add lno-branch.
+
 2003-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* maintainer-addresses: New script.
