--- a/gcc/doc/install.texi
+++ b/gcc/doc/install.texi
@@ -2096,6 +2096,8 @@ GNU Compiler Collection on your machine.
 @item
 @uref{#*-*-vxworks*,,*-*-vxworks*}
 @item
+@uref{#x86_64-*-*,,x86_64-*-*, amd64-*-*}
+@item
 @uref{#xtensa-*-elf,,xtensa-*-elf}
 @item
 @uref{#xtensa-*-linux*,,xtensa-*-linux*}
@@ -3493,6 +3495,16 @@ GCC's exception handling runtime requires a special ``configlette''
 module, @file{contrib/gthr_supp_vxw_5x.c}.  Follow the instructions in
 that file to add the module to your kernel build.  (Future versions of
 VxWorks will incorporate this module.)  
+
+@html
+<hr />
+@end html
+@heading @anchor{x86_64-*-*}x86_64-*-*, amd64-*-*
+
+GCC supports the x86-64 architecture implemented by the AMD64 processor
+(amd64-*-* is an alias for x86_64-*-*) on GNU/Linux, FreeBSD and NetBSD.
+On GNU/Linux the default is a bi-arch compiler which is able to generate
+both 64-bit x86-64 and 32-bit x86 code (via the @option{-m32} switch).
 
 @html
 <hr />
