--- a/gcc/doc/gcc.texi
+++ b/gcc/doc/gcc.texi
@@ -56,7 +56,7 @@
 
 @copying
 Copyright @copyright{} 1988, 1989, 1992, 1993, 1994, 1995, 1996, 1997, 1998,
-1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
+1999, 2000, 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.2 or
@@ -97,7 +97,7 @@ Boston, MA 02111-1307 USA
 @sp 2
 @center Richard M. Stallman
 @sp 3
-@center Last updated 30 December 2002
+@center Last updated 2 January 2004
 @sp 1
 
 @center for GCC @value{version-GCC}
