2004-01-02  Matthias Klose  <doko@debian.org>
        Backport from mainline:
        2003-12-28  Mark Mitchell  <mark@codesourcery.com>

        PR c++/13081
        * decl.c (duplicate_decls): Preserve inline-ness when redeclaring
        a function template.

	PR c++/13081
	* g++.dg/opt/inline6.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75320 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-02  Matthias Klose  <doko@debian.org>
+
+	Backport from mainline:
+	2003-12-28  Mark Mitchell  <mark@codesourcery.com>
+ 
+	PR c++/13081
+	* g++.dg/opt/inline6.C: New test.
+
 2004-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	PR optimization/13521
