* doc/c-tree.texi: Fix @item vs. @itemx. * doc/cpp.texi: Likewise. * doc/install.texi: Likewise. * doc/invoke.texi: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75322 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-02  Andreas Schwab  <schwab@suse.de>
+
+	* doc/c-tree.texi: Fix @item vs. @itemx.
+	* doc/cpp.texi: Likewise.
+	* doc/install.texi: Likewise.
+	* doc/invoke.texi: Likewise.
+
 2004-01-02  Andreas Jaeger  <aj@suse.de>, Gerald Pfeifer  <gp@suse.de>
 
 	* doc/install.texi (Specific): Mention x86_64.
