* expr.c (store_constructor):  Fix pasto in previous patch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75327 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-02  Jan Hubicka  <jh@suse.cz>
+
+	* expr.c (store_constructor):  Fix pasto in previous patch.
+
 2004-01-02  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/i386/cygming.h: Fix comment formatting.
