--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-02  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/mn10300/mn10300.h (PREDICATE_CODES): Add
+	const_8bit_operand and call_address_operand.
+
 2004-01-02  Jan Hubicka  <jh@suse.cz>
 
 	* cgraphunit.c (cgraph_optimize_function):  Call optimize_inline_calls
