2004-01-02  Andrew Pinski  <pinskia@physics.uc.edu>
        * loop.c (loop_optimize): Free all loops_info's mems.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75339 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-02  Andrew Pinski  <pinskia@physics.uc.edu>
 
+	* loop.c (loop_optimize): Free all loops_info's mems.
+
 	* c-typeck.c (finish_init): Free spelling_base before 
 	setting it again.
 	
