--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-02  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.md (fp constant pool splitter): Reorg suppression
+	for sse and 387; add suppression for mmx.
+
 2004-01-02  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* loop.c (loop_optimize): Free all loops_info's mems.
