--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-02  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* MAINTAINERS: Add myself to 'Write After Approval' section.
+
 2003-12-31  Roger Sayle  <roger@eyesopen.com>
 
 	* configure.in (ia64*-*-hpux*): Disable building java libraries.
