* tree.h (integer_nonzerop): Use PARAMS macro with prototype. 	* tree.c (integer_nonzerop): Use K&R style function declaration.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75355 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-02  Roger Sayle  <roger@eyesopen.com>
+
+	* tree.h (integer_nonzerop): Use PARAMS macro with prototype.
+	* tree.c (integer_nonzerop): Use K&R style function declaration.
+
 2004-01-02  Andreas Schwab  <schwab@suse.de>
 
 	* doc/c-tree.texi: Fix @item vs. @itemx.
