--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-03  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/13094
+	* parser.c (cp_parser_template_argument): Don't call
+	make_unbound_class_template directly.
+	(cp_parser_lookup_name): Don't extract TEMPLATE_DECL from
+	UNBOUND_CLASS_TEMPLATE tree node.
+
 2004-01-02  Richard Sandiford  <rsandifo@redhat.com>
 
 	PR target/12729
